--- a/LABST1.HTML
+++ b/LABST1.HTML
@@ -9,13 +9,13 @@
   
     <h1>Introduction</h1>
     <p>
-        Welcome to the <b>Course Curriculum</b>. This page demonstrates the use of <i>HTML formatting</i>, <i>lists</i>, and special characters such as @, &lt;, &gt;.
+        This Course Curriculum is deigned to enhance students' knowledge of use of <i>HTML formatting</i>, <b>lists</b>, and <u>special characters</u> such as @, &lt;, &gt;.
     </p>
    
-    <h2>Semester 1 Subjects (Ordered List)</h2>
+    <h2>Subjects (Ordered List)</h2>
     <ol>
         <li>Mathematics I</li>
-        <li>Computer Fundamentals</li>
+        <li>Physics</li>
         <li>Programming in C</li>
         <li>Electronics Basics</li>
     </ol>
@@ -36,18 +36,18 @@
         <dd>Introduction to Object-Oriented Programming concepts.</dd>
     </dl>
    
-    <h2>Course Modules (Nested List)</h2>
+    <h2>Subjects (Nested Lists)</h2>
     <ol>
-        <li>Module 1: Basics
+        <li>Maths
             <ul>
-                <li>Introduction</li>
-                <li>History of Computers</li>
+                <li>Matrices</li>
+                <li>Vector Spaces</li>
             </ul>
         </li>
-        <li>Module 2: Programming
+        <li>Physics
             <ul>
-                <li>Variables & amp; Data Types</li>
-                <li>Control Statements</li>
+                <li>Nano</li>
+                <li>Quantum Physics</li>
             </ul>
         </li>
     </ol>
@@ -58,7 +58,6 @@
             <ol>
                 <li>HTML</li>
                 <li>CSS</li>
-                <li>JavaScript</li>
             </ol>
         </li>
         <li>Database
